# Manufacturing-Software-System-ARIAC

./: README.md
final_group1/: CMakeLists.txt  package.xml
final_group1/config/: sensors.yaml
final_group1/doc/: README.txt
final_group1/final_group1/: competition_interface.py  kitting_interface.py
final_group1/include/: floor_robot_cpp_python.hpp
final_group1/launch/: final_group1.launch.py  moveit.launch.py
final_group1/script/: competition_node.py  kitting_node.py
final_group1/src/: floor_robot_cpp_python.cpp
robot_msgs/: CMakeLists.txt  package.xml
