<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>final_group1</name>
  <version>0.0.0</version>
  <description>RWA5 Package</description>
  <maintainer email="akhiljavvadi@umd.edu">akhiljavvadi</maintainer>
  <maintainer email="akoushik@umd.edu">koushik</maintainer>
  <maintainer email="mmunawwa@umd.edu">munawwar</maintainer>
  <maintainer email="charith@umd.edu">charith</maintainer>
  <maintainer email="nerlekar@umd.edu">Varad</maintainer>
  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>robot_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ariac_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
